2016-08-31	Rediagnosed and refixed partly misdiagnosed bug.

		.travis.yml :
		- now trying target compilation with `-static' and without
		  `-mcmodel=medium'

		include/innocent-pear/lolwut.h :
		- lolwut_impl<...>:
		  - now narrows Disp2 to 0...0x1000 if compiling with
		    `clang++ -static' for x86-64
		  - added one more __asm(...) barrier at the end of set(...)

		README.md :
		- re-updated bugs list

2016-08-30	"Adde parvum parvo magnus acervus erit."

		.travis.yml :
		- trying target compilation with `-static' (but without
		  `-fPIC -pie'; apparently the two still cannot mix on
		  Linux), as well as `-mcmodel=medium'

		README.md :
		- updated bugs list

2016-08-28	"For far more marvelous is the truth than any artists of the
		past imagined!  ...  What men are poets who can speak of
		Jupiter if he were like a man, but if he is an immense
		spinning sphere of methane and ammonia must be silent?"

		bin/innocent-pear-c++.cc :
		- now scrambles part of .data.rel.ro, and the `dogecoin'
		  array

		configure ,
		GNUmakefile :
		- now tries to detect and output target-side endianness

		share/innocent-pear/doge-03.cc :
		- now unscrambles part of .data.rel.ro
		- now unscrambles and processes the `dogecoin' array without
		  modifying it in place

		share/innocent-pear/doge-04.cc :
		- now defines .innocent_pear.relro.start

		test/test-doge-abs-reloc.cc ,
		test/test-doge-abs-reloc.good :
		- added relocations in read-only section (.data.rel.ro)

		lolwutconf/ :
		- bumped to e4cff39ceb

2016-08-27	"Let sleeping bags lie."

		bin/innocent-pear-c++.cc :
		- now uses slightly fewer temporary files

		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/sleepier.cc :
		- added sleepier_t::cheshire()

2016-08-26	"A celebrity is a person who is known for his well-knownness."

		include/innocent-pear/orly.h :
		- generalized orly<...>::wut(...) into orly<...>::wot(...)
		  which allows arbitrary operations on data items